--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,9 +11,12 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
-      - name: Generate
-        run: go generate -v ./...
+          cache: true
       - name: Build
         run: go build -v ./...
-      - name: Test
+      - name: Run linters
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+      - name: Run tests
         run: go test -v ./...
