--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,16 +4,28 @@ issues:
   max-per-linter: 0
   max-same-issues: 0
 
+  exclude-rules:
+    # disable funlen for test funcs
+    - source: "^func Test"
+      linters:
+        - funlen
+
 linters:
   disable-all: true
   enable:
+    - bidichk
     - durationcheck
+    - decorder
+    - dogsled
     - errcheck
     - exportloopref
     - forcetypeassert
+    - funlen
     - godot
+    - godox
     - gofmt
     - gosimple
+    - goconst
     - ineffassign
     - makezero
     - misspell
