chore: can be a 1-liner

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,4 @@
-# Visit https://golangci-lint.run/ for usage documentation
-# and information on other useful linters
+# Visit https://golangci-lint.run/ for usage documentation and information on other useful linters
 issues:
   max-per-linter: 0
   max-same-issues: 0
