chore: bumped actions/labeler to v5

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,16 +1,26 @@
 github-actions:
-- '.github/**'
-- '.goreleaser.yaml'
+  - changed-files:
+      - any-glob-to-any-file:
+        - '.github/**'
+        - '.goreleaser.yaml'
 
-dependencies: 
-- 'go.mod'
-- 'go.sum'
+dependencies:
+  - changed-files:
+      - any-glob-to-any-file:
+        - 'go.mod'
+        - 'go.sum'
 
 documentation:
-- 'README.md'
+  - changed-files:
+      - any-glob-to-any-file:
+        - 'README.md'
 
 legal:
-- 'LICENSE'
+  - changed-files:
+      - any-glob-to-any-file:
+        - 'LICENSE'
 
 tests:
-- '**/*_test.go'
+  - changed-files:
+      - any-glob-to-any-file:
+        - '**/*_test.go'
