--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,6 @@
+# Copyright (c) Bruno Schaatsbergen
+# SPDX-License-Identifier: MIT
+
 # Visit https://golangci-lint.run/ for usage documentation and information on other useful linters
 issues:
   max-per-linter: 0
