--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,6 @@
+# Copyright (c) Bruno Schaatsbergen
+# SPDX-License-Identifier: MIT
+
 project_name: "cidr"
 
 # before are hooks that will be run before any builds are done, so good to put install scripts and stuff that your builds need here
