--- a/.github/stale.yaml
+++ b/.github/stale.yaml
@@ -1,3 +1,6 @@
+# Copyright (c) Bruno Schaatsbergen
+# SPDX-License-Identifier: MIT
+
 # Number of days of inactivity before an issue becomes stale
 daysUntilStale: 30
 # Number of days of inactivity before a stale issue is closed
